yamlfiles/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: api-ns  
spec:
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:        
      containers:
      - name: grafana
        image: registryysu9847.azurecr.io/grafana-sim:1.0             
        ports: 
        - containerPort: 80
          name: grafana      
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: api-ns
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: grafana
