yamlfiles/prom.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus
  namespace: api-ns  
spec:
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:        
      containers:
      - name: prometheus
        image: registryysu9847.azurecr.io/prometheus-sim:1.0             
        ports: 
        - containerPort: 80
          name: prometheus      
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: api-ns
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: prometheus
