yamlfiles/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-app
spec:
  selector:
    matchLabels:
      app: trips-app
  template:
    metadata:
      labels:
        app: trips-app
    spec:        
      containers:
      - name: trips
        image: registryysu9847.azurecr.io/tripinsights/trips:1.0        
        ports: 
        - containerPort: 80
          name: trips      

---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: trips-app
