yamlfiles/user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-app
spec:
  selector:
    matchLabels:
      app: user-java-app
  template:
    metadata:
      labels:
        app: user-java-app
    spec:        
      containers:
      - name: user-java
        image: registryysu9847.azurecr.io/tripinsights/user-java:1.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports: 
        - containerPort: 80
          name: user-java
---
apiVersion: v1
kind: Service
metadata:
  name: user-java-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: user-java-app
